style: made buttons fixed-width on smaller screens

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -116,6 +116,10 @@ main {
         width: 90%;
     }
 
+    .btn {
+        width: 150px;
+    }
+
     .btn-grid {
         flex-direction: column;
         align-items: center;
